application-workloads/airflow/mongodb-sharded-on-centos/nested/shared-resources.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "networkSettings": {
      "type": "object",
      "metadata": {
        "Description": "Network settings object"
      }
    },
    "namespace": {
      "type": "string",
      "metadata": {
        "Description": "namespace"
      }
    },
    "location": {
      "type": "string",
      "metadata": {
        "description": "Location for all resources."
      }
    }
  },
  "variables": {
    "securityGroupName": "[concat(parameters('namespace'), 'nsg')]",
    "nsgName": "[variables('securityGroupName')]"
  },
  "resources": [
    {
      "apiVersion": "2019-07-01",
      "type": "Microsoft.Compute/availabilitySets",
      "name": "[concat(parameters('namespace'), 'set')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Aligned"
        },
        "properties": { 
          "platformFaultDomainCount": 2,
          "platformUpdateDomainCount": 5
        }
    },
    {
      "apiVersion": "2018-10-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('securityGroupName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "SSH",
            "properties": {
              "description": "Allows SSH traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "MongoDB",
            "properties": {
              "description": "Allows MongoDB traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "27017",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2019-07-01",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('networkSettings').virtualNetworkName]",
      "location": "[parameters('location')]",
	  "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups/',variables('nsgName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('networkSettings').addressPrefix]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('networkSettings').subnet.dse.name]",
            "properties": {
              "addressPrefix": "[parameters('networkSettings').subnet.dse.prefix]",
              "networkSecurityGroup": { 
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('nsgName'))]"
              }
            }
          }
        ]
      }
    }
  ]
}
